--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,23 @@
   <!-- build:css({.tmp,app}) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/navbar.css">
+  <link rel="stylesheet" href="styles/dashboard.css">
+  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
+  <link rel="stylesheet" href="bower_components/toastr/toastr.css">
   <!-- endbuild -->
 </head>
-<body ng-app="pomasanaAppApp">
+<body ng-app="pomasanaAppApp" ng-controller="AppController">
   <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <!-- Add your site or application content here -->
-  <div ng-controller="NavbarcontrollerCtrl" ng-include="'views/navbar.html'" ></div>
-  <div class="container" ng-view=""></div>
+  <div ng-include="'views/navbar.html'" ></div>
+  <div class="container-fluid">
+    <div class="row" >
+      <div ng-if="currentUser" ng-include="'views/left-navbar.html'" ></div>
+      <div class="col-sm-9 col-md-10 main" ng-class="currentUser ? 'col-md-offset-2' : 'col-md-offset-1'" ng-view=""></div>
+    </div>
+  </div>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -43,7 +51,6 @@
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
-
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -51,13 +58,20 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
   <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
+  <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
+  <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
+  <script src="bower_components/toastr/toastr.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
-  <script src="scripts/controllers/navbarcontroller.js"></script>
+  <script src="scripts/controllers/appController.js"></script>
   <script src="scripts/services/authService.js"></script>
+  <script src="scripts/services/userService.js"></script>
+  <script src="scripts/services/errorService.js"></script>
+  <script src="scripts/services/toastService.js"></script>
+  <script src="scripts/services/taskService.js"></script>
   <!-- endbuild -->
 </body>
 </html>
