--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/dashboard.css">
+  <link rel="stylesheet" href="styles/progress-button.css">
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
   <link rel="stylesheet" href="bower_components/toastr/toastr.css">
   <!-- endbuild -->
@@ -30,8 +31,8 @@
   <div ng-include="'views/navbar.html'" ></div>
   <div class="container-fluid">
     <div class="row" >
-      <div ng-if="currentUser" ng-include="'views/left-navbar.html'" ></div>
-      <div class="col-sm-9 col-md-10 main" ng-class="currentUser ? 'col-md-offset-2' : 'col-md-offset-1'" ng-view=""></div>
+      <div ng-if="isLogged()" ng-include="'views/left-navbar.html'" ></div>
+      <div class="col-sm-9 col-md-10 main" ng-class="isLogged() ? 'col-md-offset-2' : 'col-md-offset-1'" ng-view=""></div>
     </div>
   </div>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -61,17 +62,27 @@
   <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
   <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
   <script src="bower_components/toastr/toastr.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
+  <script src="scripts/progress-button.js"></script>
+  <script src="scripts/directives.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/appController.js"></script>
+  <script src="scripts/controllers/inventoryController.js"></script>
+  <script src="scripts/controllers/pomotaskController.js"></script>
+  <script src="scripts/controllers/modalControllers.js"></script>
   <script src="scripts/services/authService.js"></script>
   <script src="scripts/services/userService.js"></script>
   <script src="scripts/services/errorService.js"></script>
   <script src="scripts/services/toastService.js"></script>
   <script src="scripts/services/taskService.js"></script>
+  <script src="scripts/services/modalService.js"></script>
+  <script src="scripts/services/pomotaskService.js"></script>
+  <script src="scripts/services/pomodoroService.js"></script>
+  <script src="scripts/services/helperService.js"></script>
   <!-- endbuild -->
 </body>
 </html>
