--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
   <script src="scripts/services/toastService.js"></script>
   <script src="scripts/services/taskService.js"></script>
   <script src="scripts/services/modalService.js"></script>
+  <script src="scripts/services/pomotaskPomService.js"></script>
   <script src="scripts/services/pomotaskService.js"></script>
   <script src="scripts/services/pomodoroService.js"></script>
   <script src="scripts/services/helperService.js"></script>
