Some graphic improvements

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
   <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
   <script src="bower_components/toastr/toastr.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/spin.js/spin.js"></script>
+  <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
