Some graphic improvements 10

--- a/app/pomodoro.html
+++ b/app/pomodoro.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html>
-    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# pomasana: http://ogp.me/ns/fb/pomasana#">
-        <meta property="fb:app_id" content="498702546929715" />
-        <meta property="og:title" content="Pomodoro" />
-        <meta property="og:image" content="http://localhost:9000/tomato3.png" />
-        <meta property="og:url" content="http://pomasana.herokuapp.com" />
-        <meta property="og:type" content="pomasana:pomodoro" />
-    </head>
- 
+<head>
+	<meta property="og:title" content="Pomodoro">
+  <meta property="og:image" content="http://pomasana.herokuapp.com/pomodoro.png">
+  <meta property="og:url" content="http://pomasana.herokuapp.com/pomodoro.html">
+  <meta property="fb:app_id"          content="498702546929715" /> 
+<meta property="og:type"            content="pomasana:pomodoro" /> 
+  </head>
+<body>
+
+</body>
 </html>
