--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/dashboard.css">
+  <link rel="stylesheet" href="styles/landing-page.css">
   <link rel="stylesheet" href="styles/progress-button.css">
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
   <link rel="stylesheet" href="bower_components/toastr/toastr.css">
@@ -51,7 +52,7 @@
   <div class="container-fluid">
     <div class="row" >
       <div ng-if="isLogged()" ng-include="'views/left-navbar.html'" ></div>
-      <div class="col-sm-9 col-md-10 main" ng-class="isLogged() ? 'col-md-offset-2' : 'col-md-offset-1'" ng-view=""></div>
+      <div  ng-class="isLogged() ? 'col-md-offset-2 col-sm-9 col-md-10 main' : ''" ng-view=""></div>
     </div>
   </div>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
